--- a/main.tex
+++ b/main.tex
@@ -14,7 +14,6 @@
 
 \usepackage{amsmath}
 \usepackage{amssymb}
-\usepackage{hyperref}
 
 \usepackage{tocloft}
 
@@ -60,12 +59,10 @@
 
 \pgfplotsset{compat=1.3}
 
-%\usepackage[final]{changes}
-\definecolor{blue}{rgb}{0.6039, 0.0549, 0.1647}
-\usepackage{changes}
-\definecolor{blue}{rgb}{0,0,1.}
-
-\includeonly{biblio,power,steady}
+\usepackage[final]{changes}
+%\definecolor{blue}{rgb}{0.6039, 0.0549, 0.1647}
+%\usepackage{changes}
+%\definecolor{blue}{rgb}{0,0,1.}
 
 \let\vec\mathbf
 
@@ -73,6 +70,10 @@
 
 \usepackage{enumitem}
 \setlist{nolistsep}
+
+\usepackage{hyperref}
+
+%\includeonly{biblio,extra}
 
 \begin{document}
 
@@ -99,6 +100,7 @@
 \include{appa}
 \include{surfaces}
 \include{bootstrap}
+\include{extra}
 
 \include{biblio}
 
