Switch to IEEE citations

--- a/biblio.tex
+++ b/biblio.tex
@@ -5,5 +5,5 @@
 \begin{singlespace}
 \bibliography{main}
 %\bibliographystyle{plain}
-\bibliographystyle{unsrt}
+\bibliographystyle{ieeetr}
 \end{singlespace}
