Add myequations to surfaces chapter

--- a/surfaces.tex
+++ b/surfaces.tex
@@ -63,6 +63,7 @@ The last constraint, which is related to the surface curvature at $\alpha = \pi$
 Here, g is a shaping parameter approximately equal to one:
 \begin{equation}
 	g = \frac{9 - 2 \delta - 0.3 \cdot ( 1 - \delta ^2 ) }{8}
+	\myequations{Shaping Parameter -- $g$}
 \end{equation}
 
 \section{Cross-sectional Area and Volume}
@@ -135,8 +136,10 @@ Since Q is only a function of $\rho$, the $\alpha$ integral can be carried out a
  \begin{equation}
   	\label{eq:qv}
  	Q_V = 4 \pi^2 R_0 a^2 \kappa g \int_0^1 Q(\rho) \rho \, d\rho
+ 	\myequations{Volume Integral -- $Q_V$}
  \end{equation}
 \begin{equation}
 	\label{eq:qs}
 	Q_S = 2 \pi a^2 \kappa g \int_0^1 Q(\rho) \rho \, d\rho
+	\myequations{Surface Integral -- $Q_S$}
 \end{equation}
