--- a/intro.tex
+++ b/intro.tex
@@ -27,9 +27,9 @@
 	\label{fig:fusion_reactor}
 \end{figure}
 
-\added{The central goal of fusion energy research is to build an economically competitive nuclear reactor. It has long been joked, though, that fusion power will always be twenty years away. This is mainly due to the nonlinearities inherent to a reactor system and the high upfront cost of building a new machine. The model developed for this paper uses standard theory and empirical fits to find cost trends from this nonlinear system. An important conclusion is that building an economic reactor using existing technology would be impossible. One solution may be improving magnet technology -- as MIT is exploring with high-temperature superconducting (HTS) tape.}
+\added{The central goal of fusion energy research is to build an economically competitive nuclear reactor. It has long been joked, though, that fusion power will always be twenty years away. This is mainly due to the nonlinearities inherent to a reactor system and the high upfront cost of building new machines. The model developed for this paper uses standard theory and empirical fits to find cost trends from this nonlinear system. An important conclusion is that building an economic reactor using existing technology would be impossible. One solution may be improving magnet technology -- as MIT is exploring with high-temperature superconducting (HTS) tape.}
 
-\added{As can be seen by comparing the European and American/Asian fusion reactor design efforts, though, one of the most important decisions is whether to run the reactor as pulsed (EU\cite{eupulsed}) or steady-state (US\cite{ussteady} and Korea\cite{kstar}). The distinction between the two mainly manifests itself in the choice of auxiliary current drive:  inductive  for pulsed and lower hybrid for steady-state.\cite{jeff} With the model built for this thesis, it is possible to perform a direct comparison of these two modes of operations. }
+\added{As can be seen by comparing the European and American/Asian fusion reactor design efforts, though, one of the most important decisions is whether to run the reactor as pulsed (EU\cite{eupulsed,eupulsed_2}) or steady-state (US\cite{ussteady} and Korea\cite{kstar}). The distinction between the two mainly manifests itself in the choice of auxiliary current drive:  inductive  for pulsed and lower hybrid for steady-state.\cite{jeff} With the model built for this thesis, it is possible to perform a direct comparison of these two modes of operations. }
 
 \added{Due to the speed and simplicity of the model, hundreds of reactors can be simulated in minutes. Further, the model has been benchmarked against other ones from the literature\cite{ussteady,arc,process,inputfile}, allowing it to answer several critical questions regarding the comparison of the two modes of operation. A major finding of this is that HTS tape should appear in different places for the two modes of operation: within the central solenoid for pulsed machines and inside the TF coil magnets for steady-state ones. }
 
@@ -41,7 +41,7 @@
 
 \added{The leading candidate for the first economic, power-producing fusion reactor is a tokamak. As shown in \cref{fig:fusion_reactor}, tokamaks are doughnut-shaped metal structures that use magnets to confine their fusion-grade plasmas. The challenge in building such a device comes from the various physics and engineering constraints it must satisfy -- i.e. not surpassing acceptable levels of neutron damage, plasma pressure, etc.} 
 
-\added{One of the most contentious points of reactor design, however, is whether to run it as: pulsed (the European effort\cite{eupulsed}) or steady-state (the American/Asian approach\cite{ussteady,kstar}). Here, pulsed operation refers to how a reactor is ramped up and down several times a day. Whereas steady-state implies a machine is functionally kept ramped up the entirety of its fifty-year campaign. These behaviors are shown in \cref{fig:pulses}. The difficulties involves with the two modes of operation are then: cyclical stresses for pulsed and expensive current drive for steady state.\cite{jeff}}
+\added{One of the most contentious points of reactor design, however, is whether to run it as: pulsed (the European effort\cite{eupulsed,eupulsed_2}) or steady-state (the American/Asian approach\cite{ussteady,kstar}). Here, pulsed operation refers to how a reactor is ramped up and down several times a day. Whereas steady-state implies a machine is functionally kept ramped up the entirety of its fifty-year campaign. These behaviors are shown in \cref{fig:pulses}. The difficulties involves with the two modes of operation are then: cyclical stresses for pulsed and expensive current drive for steady state.\cite{jeff}}
 
 \deleted{When people talk about fusion, they usually talk about plasma physics, and when people talk about plasma physics, they often talk about things like: the sun, lightning, and the aurora borealis. Of these three, the sun is the only nuclear reactor. However, the sun can stay on all day because the massive gravity of its fuel source helps keep it self-contained in space. On Earth, this is not possible -- the plasma fuel needs to be contained by other means (i.e.\ with magnets).}
 
@@ -53,7 +53,8 @@
 
 \begin{figure}
 	\centering
-	\begin{adjustbox}{width=0.75\textwidth}
+	\begin{adjustbox}{width=0.65\textwidth}
+		\large
 		\input{images/pulsed_steady}
 	\end{adjustbox}
 %	\includegraphics[width=0.85\textwidth]{images/test_image}
@@ -111,31 +112,30 @@ To \added{truly} compare tokamaks used as fusion \replaced{reactors, though,}{re
 
 \replaced{Therefore,}{As such,} this paper adopts stand-ins for the conventional capital cost and cost-per-watt metrics. This is done for simplicity, \replaced{both in:}{for both:} \replaced{formulating the relations and}{modeling reasons as well as} conveying the two metrics to physicists. \replaced{The approximation for the}{To begin, the relevant approximation for} capital cost -- how much a tokamak costs to build -- is the magnetic energy. \cite{griffiths}
 \begin{equation}
+	\tcboxmath{
 	W_M \propto R^3 B^2
 	\label{eq:w_m}
+	}
+	\myequations{Magnetic Energy -- $W_M$}
 \end{equation}
-\myequations{Magnetic Energy -- $W_M$}
-
 In this magnetic energy proportion relation, the tokamak's major radius -- R -- is involved in a volumetric term ($R^3$) and B is the strength (in Teslas) of the \replaced{toroidal magnetic field.}{hooped shape magnetic field that lays nested within the plasma's shell (near its core).} This quantity simply states that the two surefire ways to make a machine more expensive \replaced{are to build it bigger and to use stronger magnets.}{to build are: making it larger and using stronger magnets.} \added{As these terms also improve confinement, this cost introduces a trade-off between size and magnet technology. This is why the proposed ARC reactor -- designed with HTS tape -- could be half the size of ITER, which uses conventional LTS technology.}
 
 The next metric, the cost-per-watt, is defined by dividing the capital cost (i.e.\ the magnetic energy) by the main source of power output. \added{For a tokamak, this source of power is fusion -- discussed in more detail in \cref{chapter:power}.} \added{The cost-per-watt thus measures how economically competitive a reactor will be once it is build. This is how to compare the rate of return for different base-load power sources (e.g. fission, coal, and solar).} \deleted{This quantity measures how profitable a reactor will be once it is built. In a tokamak, the main power output is assumed to be fusion power, which relies on light elements (i.e.\ two Hydrogens) fusing into a heavier one (i.e.\ one Helium) -- hopefully releasing enough energy to offset the expense of causing it to happen in the first place. Although fusion power will not be defined till later, it does highlight the fact that this measure of cost-per-watt actually has units of time!} 
 \begin{equation}
 	\tilde C_W = \frac{W_M}{P_F}
 \end{equation}
+\added{A final correction can be made on the cost-per-watt to account for reactor downtime, which is fundamental to pulsed operation. This is handled through the duty factor ($f_{Duty}$) that is defined as the ratio of a reactor's quasi-steady-state flattop duration to the entire pulse length of a tokamak. In the context of the cost-per-watt, it scales down the fusion power:}
 %\footnote{As energy per unit watt has units of time (i.e seconds).
 \deleted{The final piece of the costing puzzle is a duty factor that levelizes the comparison of pulsed and steady-state tokamaks. As pulsed machines may be off 20\% of the time, their fusion power output should be reduced by that percentage. This is accounted for in the duty factor, which is simply the ratio of the flattop -- the time when pulsed machines are approximately held at steady-state -- to the entire length of the pulse.}
 \deleted{In pulsed machines, the entire pulse includes charging the inductive sources as well as flushing out the tokamak between runs. These non-flattop portions of time can last around thirty minutes (where the reactor makes no money). As steady-state machines lack these non-flattop portions, their duty factors are rightfully one. Analysis in Fig.\ \ref{section:pulse} and discussion with several researchers, however, show that the same will probably hold true for a pulsed reactor, too.}
 \deleted{Summarizing, the cost-per-watt coupled with the duty factor provides an ad hoc pricing metric, $C_W$, given by:}
-
-\added{A final correction can be made on the cost-per-watt to account for reactor downtime, which is fundamental to pulsed operation. This is handled through the duty factor ($f_{Duty}$) that is defined as the ratio of a reactor's quasi-steady-state flattop duration to the entire pulse length of a tokamak. In the context of the cost-per-watt, it scales down the fusion power:}
 \begin{equation}
-	\tcboxmath{
+	\tcbhighmath{
 	C_W = \frac{W_M}{f_{Duty} \cdot P_F}
 	}
 	\label{eq:c_w}
+	\myequations{Cost-per-Watt -- $C_W$}
 \end{equation}
-\myequations{Cost per Watt -- $C_W$}
-
 \added{For a steady-state reactor, this duty factor is assumed to be held at one. Pulsed machines, on the other hand, can see around thirty minutes of downtime,\cite{inputfile} which leads to duty factors around 80\%. Analysis in \cref{section:pulse}, however, shows that pulsed reactors may also have duty factors near unity.}
 
 \deleted{It serves as a cornerstone for comparing the entire landscape of tokamak reactors -- whether they run in pulsed or steady-state operation. Although not a true engineering cost metric (i.e.\ in dollars per watt), it does provide an obvious physics meaning. Coupled with the magnetic energy stand-in for capital cost, these two costs allow researchers to pinpoint profitable and inexpensive tokamaks within reactor space.}
@@ -146,7 +146,7 @@ The next metric, the cost-per-watt, is defined by dividing the capital cost (i.e
 
 Before reactors can be \replaced{priced}{costed}, though, they have to be modeled. Therefore the first half of this thesis is devoted to the theory behind tokamak design. \replaced{Emphasis}{A priority} is placed more on a physicist's intuition than an engineer's costing rigor. This is justified by the nonlinearities inherent to \deleted{the} fusion systems and rationalized by this paper's results matching more sophisticated \replaced{models}{frameworks} with high fidelity.
 
-\added{Stepping back, a fusion systems model is an approach to designing reactors based on satysfying various physics and engineering constraints. Zero-dimensional (0-D) systems models are then a particular subclass of these that reduce the inherently 3-D problem of design to a collection of scalar, averaged values. This reduction in complexity allows models to be orders of magnitude faster. The natural corollary of this is that hundreds of reactors can be simulated in minutes.}
+\added{Stepping back, a fusion systems model is an approach to designing reactors based on satisfying various physics and engineering constraints. There are many of these models in the field.\cite{hartmann,process,arc,minervini,helios,sycomore,fresco,zohm,aries,plasmod} Zero-dimensional (0-D) systems models are then a particular subclass of these that reduce the inherently 3-D problem of design to a collection of scalar, averaged values. This reduction in complexity allows models to be orders of magnitude faster. The natural corollary of this is that hundreds of reactors can be simulated in minutes.}
 
 \added{Within the context of reactor design, these 0-D systems models serve an important role due to their speed and simplicity. Although not truly self-consistent,}\footnote{For speed concerns, 0-D fusion systems models often ignore self consistency in quantities like pressure profiles and use empirical fits to estimate values such as the confinement time.} \added{these models are capable of exploring large areas of reactor space. This is especially important in the early stages of tokamak planning when researchers are selecting a design point. These models also have use in finding general costing trends -- as shown in this document.}
 
