--- a/steady.tex
+++ b/steady.tex
@@ -37,7 +37,7 @@ Solving this problem most generally usually involves decoupling the geometry of 
 
 The first thing people see when they look at a tokamak is its geometry \added{-- see \cref{fig:views}}. How big is it? \replaced{Is it stretched out like a bicycle tire or compressed to the point of being nearly spherical? Would a slice across the major radius result in two cross-sections that were: circular, elliptic, or triangular?}{Is it stretched out like a tire or smooshed together like a bagel? If it were torn in two, would the exposed areas look like: circles, ovals, or triangles?}
 
-\begin{figure*}[h]
+\begin{figure*}[h!]
     \centering
     \hfill 
     \begin{subfigure}[t]{0.45\textwidth}
@@ -66,9 +66,11 @@ The first thing people see when they look at a tokamak is its geometry \added{--
 These questions lend themselves to the three important geometric variables -- the inverse aspect ratio ($\epsilon$), the elongation ($\kappa$), and the triangularity ($\delta$). The inverse aspect ratio is a measure of how stretched out the device is, or formulaically:
 \begin{equation}
 	\label{eq:a}
+	\tcboxmath{
 	a = \epsilon \cdot R_0
+	}
+	\myequations{Minor Radius -- $a$}
 \end{equation}
-\myequations{Minor Radius -- $a$}
 This says that the minor radius (a), measured in meters, is related to the major radius of the machine ($R_0$) through $\epsilon$. Or more tangibly, the minor radius is related to the two small \replaced{cross-sections}{circles} that \replaced{result from a slice across the major radius of the machine.}{come from tearing a bagel in two. Whereas the major radius is related to the overall circle of the bagel when viewing it from the top.} 
 
 The remaining two geometric parameters -- $\kappa$ and $\delta$ -- are related to the shape of the torn halves. As the name hints, elongation ($\kappa$) is a measure of how stretched out the tokamak is vertically -- is the cross-section a circle or an oval? The triangularity ($\delta$) is then how much the cross-sections point outward from the center of the device. All three's effects can be seen in \cref{fig:geometry}. \added{Their exact usage within describing flux surfaces is shown in \cref{chapter:flux}. }
@@ -107,7 +109,7 @@ The remaining two geometric parameters -- $\kappa$ and $\delta$ -- are related t
     \label{fig:geometry}
 \end{figure*}
 
-These geometric factors allow the volumetric and surface integrals governing fusion power and bootstrap current to be condensed to simple radial ones -- see \cref{eq:qs,eq:qv}. The only remaining step is to define the radial profiles for: the density, temperature, and current of a plasma.
+These geometric factors allow the volumetric and surface integrals governing fusion power and bootstrap current to be condensed to simple radial ones -- see \cref{eq:qs,eq:qv}. The only remaining step is to define the radial profiles for: the density, temperature, and current density of a plasma.
 
 \subsection{Prescribing Plasma Profiles}
 
@@ -116,7 +118,6 @@ The first step in defining radial profiles is realizing that all three quantitie
 \added{Although not self-consistent, these profiles do capture enough of the physics to approximate relevant phenomenon, such as transport and fusion power.\cite{process_guide}}
 
 \begin{figure*}
-	\label{fig:profiles}
     \centering
     \hfill 
     \begin{subfigure}[t]{0.45\textwidth}
@@ -139,6 +140,7 @@ The first step in defining radial profiles is realizing that all three quantitie
     \hfill \hfill ~\\ ~\\ ~\\
     \caption{Radial Plasma Profiles} ~\\
     \small The three most fundamental \replaced{profiles}{properties} of a fusion plasma are its temperature, density, and current. These \deleted{profiles} allow the model to reduce from three dimensions to \added{just} half of one.
+    \label{fig:profiles}
 \end{figure*}
 
 \subsubsection{The Density Profile}
@@ -146,8 +148,8 @@ The first step in defining radial profiles is realizing that all three quantitie
 To begin, density has the simplest profile. This is because it is relatively flat, remaining near the average value -- $\overline n$ -- throughout the body of the plasma until quickly decaying to zero near the edge of the plasma.\footnote{Even in H-Mode plasmas where density profiles have a pedestal,\cite{density} they usually have much less of a peak than temperatures\cite{temperature} -- especially so in a reactor setting.\cite{pedestals}} For this reason, a parabolic profile with a very low peaking factor -- $\nu_n$ -- is well suited.
 \begin{equation}
 	n(\rho) = \overline n \cdot ( 1 + \nu_n ) \, \cdot ( 1 - \rho ^ 2 ) ^ {\nu_n}
+	\myequations{Density Profile -- $n$}
 \end{equation}
-\myequations{Density Profile -- $n$}
 \added{The reason $\overline n$ is referred to as the volume-averaged density is because using the volume integral -- given by \cref{eq:qv} -- over the density profile results in that value after dividing through by the volume ($\volume$):} 
 \begin{equation}
 	\overline n = \frac{ \int n(\vec{\bold{r}}) \, d\vec{\bold{r}}  }{\volume}
@@ -159,26 +161,27 @@ To begin, density has the simplest profile. This is because it is relatively fla
 The use of a parabolic profile for the plasma temperature is slightly more dubious. This is because H-Mode plasmas are actually highly peaked at the center, decaying to a non-zero pedestal temperature near the edge before finally dropping sharply to zero. This model chooses to forego this pedestal representation for a simple parabolic one -- although the pedestal approach is discussed in \cref{chapter:profiles}. Analogous to the density, the profile treats $\overline T$ as the average value and $\nu_T$ as the peaking parameter.
 \begin{equation}
 	T(\rho) = \overline T \cdot ( 1 + \nu_T ) \, \cdot ( 1 - \rho ^ 2 ) ^ {\nu_T}
+	\myequations{Temperature Profile -- $T$}
 \end{equation}
-\myequations{Temperature Profile -- $T$}
 
 \subsubsection{The Current \added{Density} Profile}
 
 The plasma current \added{density} is the third profile and cannot safely be represented by a simple parabola. This is because having an adequate bootstrap current relies heavily on a profile being peaked off-axis -- i.e.\ at some radius not at the center. This hollow profile can then be modeled with the commonly given plasma internal inductance ($l_i$). Concretely, the current's hollow profile is described by:
 \begin{equation}
 	J(\rho) = \bar{J} \cdot \frac{ \gamma ^ 2 \cdot ( 1 - \rho ^ 2 ) \cdot e^{ \gamma \rho^2 } }{ e^\gamma - 1 - \gamma}
+	\myequations{Current Density Profile -- $J$}
 \end{equation}
-\myequations{Current Profile -- $J$}
 The intermediate $\gamma$ quantity can then be numerically solved for from the plasma internal inductance using the following relations -- with $b_p$ representing the normalized poloidal magnetic field. \added{These are derived in \cref{chapter:bootstrap}.}
 \begin{equation}
 	l_i = \frac{4 \kappa}{1+\kappa^2}	 \int_0^1 b_p^2 \, \rho \, d\rho
+	\myequations{Internal Inductance -- $l_i$}
 \end{equation}
-\myequations{Internal Inductance -- $l_i$}
 \begin{equation}
 	\label{eq:b_p}
 	b_p(\rho) = \frac{ -e^{\gamma\rho^2} ( \gamma\rho^2 - 1 - \gamma ) - 1 - \gamma }{\rho \,( e^\gamma - 1 - \gamma ) }
+	\myequations{Normalized Poloidal Magnetic Field -- $b_p$}
 \end{equation}
-\myequations{Normalized Poloidal Magnetic Field -- $b_p$}
+
 Combined, these three geometric parameters and profiles lay the foundation for this zero-dimensional fusion systems model.
 
 \section{Solving the Steady Current}
@@ -189,8 +192,8 @@ As suggested, one of the most important equations in a fusion reactor is current
 	\tcboxmath{
 	I_P = I_{BS} + I_{CD}
 	}
+	\myequations{Current Balance -- $I$}
 \end{equation}
-\myequations{Current Balance -- $I$}
 The goal is then to write equations for bootstrap current and driven current. This will make heavy use of the Greenwald density limit. \replaced{The steady current will then be}{Without spoiling too much, the steady current is} shown to be only a function of temperature! In other words, this current is independent of a tokamak's geometry and magnet strength. As will be pointed out then, though, a subtlety arises that will bring the two back into the picture -- self-consistency in the current drive efficiency ($\eta_{CD}$).
 
 \subsection{Enforcing the Greenwald Density Limit}
@@ -246,7 +249,7 @@ The Greenwald density limit is \replaced{a density limit that applies to all tok
         \caption{All Tokamak Shots}
     \end{subfigure} ~\\ ~\\ ~\\
     \caption{Greenwald Density Limit} ~\\
-    \small The Greenwald Density Limit is a robust metric of what densities an H-Mode plasma can attain. Although empirical in nature, \replaced{it accurately predicts when a tokamak will undergo degraded plasma transport.\cite{greenwald}}{it is an indicator for good transport regimes.}
+    \small The Greenwald Density Limit is a robust metric of what densities an H-Mode plasma can attain. Although empirical in nature, \replaced{it accurately predicts when a tokamak will undergo degraded plasma transport.\cite{greenwald,iterdb}}{it is an indicator for good transport regimes.}
     \label{fig:greenwald}
 \end{figure*}
 
@@ -272,8 +275,8 @@ The next step is transforming the \emph{line-averaged} density ($\hat n$) into t
  	\tcbhighmath{
  	\overline n = K_n \cdot \left( \frac{I_P}{R_0^2} \right)
  	}
+ 	 \myequations{Greenwald Density -- $\overline n$}
  \end{equation}
- \myequations{Greenwald Density -- $\overline n$}
  \begin{equation}
  	K_n = \frac{2 N_G}{\epsilon^2 \, \pi^{3/2} } \cdot \left( \frac{\Gamma \left( \nu_n + \frac{3}{2} \right)}{\Gamma \left( \nu_n + 2 \right)} \right)
 \end{equation}
@@ -310,8 +313,9 @@ The first term to define in current balance, \cref{eq:ibal}, is the bootstrap cu
 		& \equiv -4.85 \cdot n \cdot T \cdot \frac{ R_0 \sqrt{ \epsilon \, \rho } }{ \sfrac{d\psi}{d\rho} } \cdot \left( \frac{1}{n} \frac{dn}{d\rho} + 0.54 \, \frac{1}{T} \frac{dT}{d\rho} \right) 
 \end{split}
 \end{equation}
- \added{
- The second definition for the bootstrap current density -- $J_{BS}$ -- comes from using well known theoretical results plus several simplifying assumptions, including the large aspect limit. The value of $\sfrac{d\psi}{d\rho}$ is given in \cref{chapter:bootstrap}.
+
+\added{
+The second definition for the bootstrap current density -- $J_{BS}$ -- comes from using well known theoretical results plus several simplifying assumptions, including the large aspect limit. The value of $\sfrac{d\psi}{d\rho}$ is given in \cref{chapter:bootstrap}. 
  }
  
 \deleted{For a more formal look into this $J_{BS}$ function, check the appendix section on pedestal temperatures. The point to make now is that it depends on the the profiles' derivatives, leading to one major discrepancy in the model.}
@@ -338,14 +342,15 @@ As shown later in the results, bootstrap fractions are often under-predicted by 
 	\tcboxmath{
 	I_{BS} = K_{BS} \cdot \overline T
 	}
+	\myequations{Bootstrap Current -- $I_{BS}$}
 \end{equation}
-\myequations{Bootstrap Current -- $I_{BS}$}
 \begin{equation}
   K_{BS} = 4.879 \cdot  K_n \cdot \left( \, \frac{1+\kappa^2}{2} \, \right) \cdot \epsilon^{5/2} \cdot H_{BS}
 \end{equation}
 \begin{equation}
   H_{BS} = ( 1 + \nu_n ) ( 1 + \nu_T ) ( \nu_n + 0.054 \nu_T ) \int_0^1 \frac{ \rho^{\,5/2} \, ( \, 1 - \rho^{\,2} \, )^{\, \nu_n + \nu_T - 1} }{b_p} \, d\rho
 \end{equation}
+
 Quickly noting, this $H_{BS}$ term serves as the analogue of \replaced{static}{fixed}-value coefficients (e.g.\ $K_{BS}$ and $K_n$) when they contain an integral. And $b_p$ represents the poloidal magnet strength given by Eq. \ref{eq:b_p}.
 
 \subsection{Deriving the Fusion Power}
@@ -402,16 +407,15 @@ Quickly noting, this $H_{BS}$ term serves as the analogue of \replaced{static}{f
 \added{The $E_F$ quantity is the energy created from a deuterium-tritium fusion reaction.} The $n_D$ and $n_T$ in this equation \added{then} represent the density of the deuterium and tritium ions, respectively. Assuming a 50-50 mix of the two, they can be related to the electron density -- i.e.\ the one used in this model -- through the dilution factor \added{($f_D$). This dilution factor represents the decrease in available fuel from part of the plasma actually being composed of non-hydrogen gasses}:
  \begin{equation}
  	n_D = n_T = f_D \cdot \left( \frac{n}{2} \right)
+ 	 \myequations{Dilution Factor -- $f_{D}$}
  \end{equation}
- \myequations{Dilution Factor -- $f_{D}$}
- The fusion reactivity, $\langle \sigma v \rangle$, is then a nonlinear function of the temperature, T, which the model approximates using the Bosch-Hale tabulation (described in the appendix). As this tabulated value appears inside an integral, it seems important to point out that the temperature is now the most difficult \replaced{dynamic}{floating} variable to handle -- over $R_0$, $B_0$, $\overline n$, and $I_P$. This will come into play when the model is formalized next chapter.
+ The fusion reactivity, $\langle \sigma v \rangle$, is then a nonlinear function of the temperature, T, which the model approximates using the Bosch-Hale tabulation (described in \cref{chapter:power}). As this tabulated value appears inside an integral, it seems important to point out that the temperature is now the most difficult \replaced{dynamic}{floating} variable to handle -- over $R_0$, $B_0$, $\overline n$, and $I_P$. This will come into play when the model is formalized next chapter.
  
  The next step in the derivation of fusion power is transforming the three-dimensional volume integral (see Eq. \ref{eq:pf_int}) into a zero-dimension averaged value. First, the volume analogue of the previously given surface-area integral is:
  \begin{equation}
-  	\label{eq:qv}
+  	\tag{\ref{eq:qv}}
  	Q_V = 4 \pi^2 R_0 a^2 \kappa g \int_0^1 Q(\rho) \rho \, d\rho
  \end{equation}
- \myequations{Volume Integral -- $Q_V$}
  Where again, Q is an arbitrary function of $\rho$ and g is a geometric factor approximately equal to one. The fusion power can now be rewritten as:
  \begin{equation}
  	P_F = \pi^2 E_F f_D^2 R_0 a^2 \kappa g \int_0^1 n^2 \langle \sigma v \rangle \rho \, d\rho
@@ -422,8 +426,8 @@ In standardized units, this becomes:
 	\tcboxmath{
 	P_F = K_F \cdot \overline{n}^2 \cdot R_0^3  \cdot (\sigma v)
 	}
+	\myequations{Fusion Power -- $P_F$}
 \end{equation}
-\myequations{Fusion Power -- $P_F$}
 \begin{equation}
   K_F = 278.3 \cdot f_D^2 \cdot ( \epsilon^2 \kappa g )
 \end{equation}
@@ -479,8 +483,8 @@ The current from LHCD can be written as:
 	\tcboxmath{
 	I_{CD} = K_{CD} \cdot I_P \cdot ( \sigma v )
 	}
+	\myequations{Current Drive -- $I_{CD}$}
 \end{equation}
-\myequations{Current Drive -- $I_{CD}$}
 \begin{equation}
 	K_{CD} = \left( K_F K_n \right) \cdot \frac{\eta_{CD}}{Q}
 \end{equation}
@@ -508,8 +512,9 @@ Combining these three equations and solving for the total plasma current ($I_P$)
 	\tcbhighmath{
 	I_P = \frac{ K_{BS} \, \overline T }{ 1 - K_{CD} ( \sigma v ) }
 	}
+	\myequations{Steady Current -- $I_P$}
 \end{equation}
-\myequations{Steady Current -- $I_P$}
+
 This is the answer we have been seeking!
 
 As mentioned before, this simple formula appears to only depend on temperature!\footnote{ This dependence only on temperature refers to dynamic variables. The plasma current can still be highly volatile to many of the static variables, such as: $\epsilon$, $\kappa$, $N_G$, $f_D$, $\nu_n$, $l_i$, etc. } Apparently, the plasma should have the same current at some temperature (i.e.\ $\overline T$ = 15 keV), regardless of the size of the machine or the strength of its magnets. This has the important corollary that each temperature maps to only one current value. \added{Further, each temperature would then map to a single magnet strength, capital cost, etc.\ (as shown next chapter).}
@@ -525,8 +530,8 @@ The logic behind finding a self-consistent current-drive efficiency is starting 
 As mentioned, a self-consistent $\eta_{CD}$ is found once a trip through the Ehst-Karney black-box results in the same $\eta_{CD}$ as was \replaced{sent}{piped} in -- to some tolerable level of error. This consistency incorporates an explicit dependence on the tokamak configuration. Mathematically,
 \begin{equation}
 	\tilde \eta_{CD} = f( R_0, B_0, \overline n, \overline T, I_P )
+	\myequations{Current Drive Efficiency -- $\eta_{CD}$}
 \end{equation}
-\myequations{Current Drive Efficiency -- $\eta_{CD}$}
 As such, to recalculate it after every solution of the steady current requires a value for both $B_0$ and $R_0$ -- the targets of this model's primary and \replaced{limiting}{secondary} constraints. These will be the highlight of the next chapter.
 
 %\end{document}
