Standardize more things and add references

--- a/bootstrap.tex
+++ b/bootstrap.tex
@@ -48,7 +48,7 @@ The normalized internal inductance $l_i$ and radial location of the current peak
 
 \section{Detailed Analysis}
 
-The starting point for the analysis is the general expression for the bootstrap current in a tokamak with arbitrary cross section.\cite{wesson} This expression can be simplified by assuming (1) equal temperature electrons and ions $T_e = T_i = T$, (2) large aspect ratio $\epsilon \ll 1$, and (3) negligible collisionality $\nu_* \rightarrow 0$. The bootstrap current $\vec J_{BS} \approx J_{BS} \vec e_\phi$ reduces to
+The starting point for the analysis is the general expression for the bootstrap current in a tokamak with arbitrary cross section.\cite{wesson,sauter} This expression can be simplified by assuming (1) equal temperature electrons and ions $T_e = T_i = T$, (2) large aspect ratio $\epsilon \ll 1$, and (3) negligible collisionality $\nu_* \rightarrow 0$. The bootstrap current $\vec J_{BS} \approx J_{BS} \vec e_\phi$ reduces to
 \begin{equation}
 	J_{BS} = -3.32 f_T R_0 n T \left( \frac{1}{n} \frac{dn}{d\psi} + 0.054 \, \frac{1}{T} \frac{dT}{d\psi} \right)
 \end{equation}
