--- a/code.tex
+++ b/code.tex
@@ -89,7 +89,7 @@ Plasma Pressure ($\overline p$) & I & $\sfrac{ (\overline p)_{const} }{ K_n K_{n
 Bootstrap Current ($f_{BS}$) & I & $\sfrac{ ( f_{BS} )_{const} }{ K_{BS} \overline T }$ & 0 & 0 & -1 \\
 Fusion Power ($P_F$) & I & $\sfrac{ (P_F)_{const} }{ K_F K_n ^ 2 ( \sigma v ) }$ & -1 & 0 & 2 \\
 Magnetic Energy ($W_M$) & I & $\sfrac{ (W_M)_{const} }{ K_{WM} }$ & 3 & 2 & 0 \\
-Cost per Watt ($C_W$) & I & $ (C_W)_{const} \cdot \left( \sfrac{ K_F K_n ^ 2 ( \sigma v ) }{ K_{WM} } \right)$ & 4 & 2 & -2 \\
+Cost-per-Watt ($C_W$) & I & $ (C_W)_{const} \cdot \left( \sfrac{ K_F K_n ^ 2 ( \sigma v ) }{ K_{WM} } \right)$ & 4 & 2 & -2 \\
 \end{tabular}
 \end{spacing}
 \label{table:eq}
