--- a/extra.tex
+++ b/extra.tex
@@ -63,7 +63,7 @@ This section includes the following magnet strength scans: ~
 \newpage
 
 \subsection*{ Plasma Temperature -- $\overline T$ }
-	\label{subsection:scan_T_bar}
+  \label{subsection:scan_T_bar}
 
 \begin{figure*}[h!]
     \centering
@@ -124,7 +124,7 @@ This section includes the following magnet strength scans: ~
         \caption{Act II}
     \end{subfigure}
     \hfill \hfill ~\\ ~\\ ~\\ ~\\
-  \caption{Magnet Scan: $\overline T$ vs $B_0$} ~\\
+  \caption[]{Magnet Scan: $\overline T$ vs $B_0$} ~\\
 \end{figure*}
 
 
@@ -194,7 +194,7 @@ This section includes the following magnet strength scans: ~
         \caption{Act II}
     \end{subfigure}
     \hfill \hfill ~\\ ~\\ ~\\ ~\\
-  \caption{Magnet Scan: $\overline n$ vs $B_0$} ~\\
+  \caption[]{Magnet Scan: $\overline n$ vs $B_0$} ~\\
 
 \end{figure*}
 
@@ -265,7 +265,7 @@ This section includes the following magnet strength scans: ~
         \caption{Act II}
     \end{subfigure}
     \hfill \hfill ~\\ ~\\ ~\\ ~\\
-  \caption{Magnet Scan: $I_P$ vs $B_0$} ~\\
+  \caption[]{Magnet Scan: $I_P$ vs $B_0$} ~\\
 \end{figure*}
 
 
@@ -335,7 +335,7 @@ This section includes the following magnet strength scans: ~
         \caption{Act II}
     \end{subfigure}
     \hfill \hfill ~\\ ~\\ ~\\ ~\\
-  \caption{Magnet Scan: $R_0$ vs $B_0$} ~\\
+  \caption[]{Magnet Scan: $R_0$ vs $B_0$} ~\\
 \end{figure*}
 
 
@@ -405,7 +405,7 @@ This section includes the following magnet strength scans: ~
         \caption{Act II}
     \end{subfigure}
     \hfill \hfill ~\\ ~\\ ~\\ ~\\
-  \caption{Magnet Scan: $\overline p$ vs $B_0$} ~\\
+  \caption[]{Magnet Scan: $\overline p$ vs $B_0$} ~\\
 \end{figure*}
 
 
@@ -475,7 +475,7 @@ This section includes the following magnet strength scans: ~
         \caption{Act II}
     \end{subfigure}
     \hfill \hfill ~\\ ~\\ ~\\ ~\\
-  \caption{Magnet Scan: $\tau_E$ vs $B_0$} ~\\
+  \caption[]{Magnet Scan: $\tau_E$ vs $B_0$} ~\\
 \end{figure*}
 
 
@@ -545,7 +545,7 @@ This section includes the following magnet strength scans: ~
         \caption{Act II}
     \end{subfigure}
     \hfill \hfill ~\\ ~\\ ~\\ ~\\
-  \caption{Magnet Scan: $\eta_{CD}$ vs $B_0$} ~\\
+  \caption[]{Magnet Scan: $\eta_{CD}$ vs $B_0$} ~\\
 \end{figure*}
 
 
@@ -615,7 +615,7 @@ This section includes the following magnet strength scans: ~
         \caption{Act II}
     \end{subfigure}
     \hfill \hfill ~\\ ~\\ ~\\ ~\\
-  \caption{Magnet Scan: $f_{BS}$ vs $B_0$} ~\\
+  \caption[]{Magnet Scan: $f_{BS}$ vs $B_0$} ~\\
 \end{figure*}
 
 
@@ -685,7 +685,7 @@ This section includes the following magnet strength scans: ~
         \caption{Act II}
     \end{subfigure}
     \hfill \hfill ~\\ ~\\ ~\\ ~\\
-  \caption{Magnet Scan: $W_M$ vs $B_0$} ~\\
+  \caption[]{Magnet Scan: $W_M$ vs $B_0$} ~\\
 \end{figure*}
 
 
@@ -755,7 +755,7 @@ This section includes the following magnet strength scans: ~
         \caption{Act II}
     \end{subfigure}
     \hfill \hfill ~\\ ~\\ ~\\ ~\\
-  \caption{Magnet Scan: $C_W$ vs $B_0$} ~\\
+  \caption[]{Magnet Scan: $C_W$ vs $B_0$} ~\\
 \end{figure*}
 
 
@@ -825,7 +825,7 @@ This section includes the following magnet strength scans: ~
         \caption{Act II}
     \end{subfigure}
     \hfill \hfill ~\\ ~\\ ~\\ ~\\
-  \caption{Magnet Scan: $q_{DV}$ vs $B_0$} ~\\
+  \caption[]{Magnet Scan: $q_{DV}$ vs $B_0$} ~\\
 \end{figure*}
 
 
@@ -895,7 +895,7 @@ This section includes the following magnet strength scans: ~
         \caption{Act II}
     \end{subfigure}
     \hfill \hfill ~\\ ~\\ ~\\ ~\\
-  \caption{Magnet Scan: $(\beta_N)_{norm}$ vs $B_0$} ~\\
+  \caption[]{Magnet Scan: $(\beta_N)_{norm}$ vs $B_0$} ~\\
 \end{figure*}
 
 
@@ -965,7 +965,7 @@ This section includes the following magnet strength scans: ~
         \caption{Act II}
     \end{subfigure}
     \hfill \hfill ~\\ ~\\ ~\\ ~\\
-  \caption{Magnet Scan: $(q_{95})_{norm}$ vs $B_0$} ~\\
+  \caption[]{Magnet Scan: $(q_{95})_{norm}$ vs $B_0$} ~\\
 \end{figure*}
 
 
@@ -1035,7 +1035,7 @@ This section includes the following magnet strength scans: ~
         \caption{Act II}
     \end{subfigure}
     \hfill \hfill ~\\ ~\\ ~\\ ~\\
-  \caption{Magnet Scan: $(P_W)_{norm}$ vs $B_0$} ~\\
+  \caption[]{Magnet Scan: $(P_W)_{norm}$ vs $B_0$} ~\\
 \end{figure*}
 
 
@@ -1105,7 +1105,7 @@ This section includes the following magnet strength scans: ~
         \caption{Act II}
     \end{subfigure}
     \hfill \hfill ~\\ ~\\ ~\\ ~\\
-  \caption{Magnet Scan: $P_F$ vs $B_0$} ~\\
+  \caption[]{Magnet Scan: $P_F$ vs $B_0$} ~\\
 \end{figure*}
 
 
@@ -1175,7 +1175,7 @@ This section includes the following magnet strength scans: ~
         \caption{Act II}
     \end{subfigure}
     \hfill \hfill ~\\ ~\\ ~\\ ~\\
-  \caption{Magnet Scan: $b$ vs $B_0$} ~\\
+  \caption[]{Magnet Scan: $b$ vs $B_0$} ~\\
 \end{figure*}
 
 
@@ -1245,7 +1245,7 @@ This section includes the following magnet strength scans: ~
         \caption{Act II}
     \end{subfigure}
     \hfill \hfill ~\\ ~\\ ~\\ ~\\
-  \caption{Magnet Scan: $c$ vs $B_0$} ~\\
+  \caption[]{Magnet Scan: $c$ vs $B_0$} ~\\
 \end{figure*}
 
 
@@ -1315,7 +1315,7 @@ This section includes the following magnet strength scans: ~
         \caption{Act II}
     \end{subfigure}
     \hfill \hfill ~\\ ~\\ ~\\ ~\\
-  \caption{Magnet Scan: $d$ vs $B_0$} ~\\
+  \caption[]{Magnet Scan: $d$ vs $B_0$} ~\\
 \end{figure*}
 
 
@@ -1385,7 +1385,7 @@ This section includes the following magnet strength scans: ~
         \caption{Act II}
     \end{subfigure}
     \hfill \hfill ~\\ ~\\ ~\\ ~\\
-  \caption{Magnet Scan: $h_{CS}$ vs $B_0$} ~\\
+  \caption[]{Magnet Scan: $h_{CS}$ vs $B_0$} ~\\
 \end{figure*}
 
 
@@ -1455,7 +1455,7 @@ This section includes the following magnet strength scans: ~
         \caption{Act II}
     \end{subfigure}
     \hfill \hfill ~\\ ~\\ ~\\ ~\\
-  \caption{Magnet Scan: $R_{CS}$ vs $B_0$} ~\\
+  \caption[]{Magnet Scan: $R_{CS}$ vs $B_0$} ~\\
 \end{figure*}
 
 
@@ -1550,7 +1550,7 @@ This section includes the following cost sensitivity studies: ~
         \caption{Act II}
     \end{subfigure}
     \hfill \hfill ~\\ ~\\ ~\\ ~\\
-  \caption{Cost Sensitivity: $H$ vs. $B_0$} ~\\
+  \caption[]{Cost Sensitivity: $H$ vs. $B_0$} ~\\
 \end{figure*}
 
 
@@ -1620,7 +1620,7 @@ This section includes the following cost sensitivity studies: ~
         \caption{Act II}
     \end{subfigure}
     \hfill \hfill ~\\ ~\\ ~\\ ~\\
-  \caption{Cost Sensitivity: $Q$ vs. $B_0$} ~\\
+  \caption[]{Cost Sensitivity: $Q$ vs. $B_0$} ~\\
 \end{figure*}
 
 
@@ -1690,7 +1690,7 @@ This section includes the following cost sensitivity studies: ~
         \caption{Act II}
     \end{subfigure}
     \hfill \hfill ~\\ ~\\ ~\\ ~\\
-  \caption{Cost Sensitivity: $\tau_{FT}$ vs. $B_0$} ~\\
+  \caption[]{Cost Sensitivity: $\tau_{FT}$ vs. $B_0$} ~\\
 \end{figure*}
 
 
@@ -1760,7 +1760,7 @@ This section includes the following cost sensitivity studies: ~
         \caption{Act II}
     \end{subfigure}
     \hfill \hfill ~\\ ~\\ ~\\ ~\\
-  \caption{Cost Sensitivity: $N_G$ vs. $B_0$} ~\\
+  \caption[]{Cost Sensitivity: $N_G$ vs. $B_0$} ~\\
 \end{figure*}
 
 
@@ -1830,7 +1830,7 @@ This section includes the following cost sensitivity studies: ~
         \caption{Act II}
     \end{subfigure}
     \hfill \hfill ~\\ ~\\ ~\\ ~\\
-  \caption{Cost Sensitivity: $f_D$ vs. $B_0$} ~\\
+  \caption[]{Cost Sensitivity: $f_D$ vs. $B_0$} ~\\
 \end{figure*}
 
 
@@ -1900,7 +1900,7 @@ This section includes the following cost sensitivity studies: ~
         \caption{Act II}
     \end{subfigure}
     \hfill \hfill ~\\ ~\\ ~\\ ~\\
-  \caption{Cost Sensitivity: $Z_{eff}$ vs. $B_0$} ~\\
+  \caption[]{Cost Sensitivity: $Z_{eff}$ vs. $B_0$} ~\\
 \end{figure*}
 
 
@@ -1970,7 +1970,7 @@ This section includes the following cost sensitivity studies: ~
         \caption{Act II}
     \end{subfigure}
     \hfill \hfill ~\\ ~\\ ~\\ ~\\
-  \caption{Cost Sensitivity: $\epsilon$ vs. $B_0$} ~\\
+  \caption[]{Cost Sensitivity: $\epsilon$ vs. $B_0$} ~\\
 \end{figure*}
 
 
@@ -2040,7 +2040,7 @@ This section includes the following cost sensitivity studies: ~
         \caption{Act II}
     \end{subfigure}
     \hfill \hfill ~\\ ~\\ ~\\ ~\\
-  \caption{Cost Sensitivity: $\kappa_{95}$ vs. $B_0$} ~\\
+  \caption[]{Cost Sensitivity: $\kappa_{95}$ vs. $B_0$} ~\\
 \end{figure*}
 
 
@@ -2110,7 +2110,7 @@ This section includes the following cost sensitivity studies: ~
         \caption{Act II}
     \end{subfigure}
     \hfill \hfill ~\\ ~\\ ~\\ ~\\
-  \caption{Cost Sensitivity: $\delta_{95}$ vs. $B_0$} ~\\
+  \caption[]{Cost Sensitivity: $\delta_{95}$ vs. $B_0$} ~\\
 \end{figure*}
 
 
@@ -2180,7 +2180,7 @@ This section includes the following cost sensitivity studies: ~
         \caption{Act II}
     \end{subfigure}
     \hfill \hfill ~\\ ~\\ ~\\ ~\\
-  \caption{Cost Sensitivity: $\nu_n$ vs. $B_0$} ~\\
+  \caption[]{Cost Sensitivity: $\nu_n$ vs. $B_0$} ~\\
 \end{figure*}
 
 
@@ -2250,7 +2250,7 @@ This section includes the following cost sensitivity studies: ~
         \caption{Act II}
     \end{subfigure}
     \hfill \hfill ~\\ ~\\ ~\\ ~\\
-  \caption{Cost Sensitivity: $\nu_T$ vs. $B_0$} ~\\
+  \caption[]{Cost Sensitivity: $\nu_T$ vs. $B_0$} ~\\
 \end{figure*}
 
 
@@ -2320,7 +2320,7 @@ This section includes the following cost sensitivity studies: ~
         \caption{Act II}
     \end{subfigure}
     \hfill \hfill ~\\ ~\\ ~\\ ~\\
-  \caption{Cost Sensitivity: $l_i$ vs. $B_0$} ~\\
+  \caption[]{Cost Sensitivity: $l_i$ vs. $B_0$} ~\\
 \end{figure*}
 
 
@@ -2390,7 +2390,7 @@ This section includes the following cost sensitivity studies: ~
         \caption{Act II}
     \end{subfigure}
     \hfill \hfill ~\\ ~\\ ~\\ ~\\
-  \caption{Cost Sensitivity: $(\beta_N)_{max}$ vs. $B_0$} ~\\
+  \caption[]{Cost Sensitivity: $(\beta_N)_{max}$ vs. $B_0$} ~\\
 \end{figure*}
 
 
@@ -2399,7 +2399,7 @@ This section includes the following cost sensitivity studies: ~
 \newpage
 
 \subsection*{ Max Kink Safety Factor -- $({q_{95}})_{max}$ }
-\label{subsection:sensitivity_max_q_95}  ~
+\label{subsection:sensitivity_max_q_95} 
 
 \begin{figure*}[h!]
     \centering
@@ -2460,7 +2460,7 @@ This section includes the following cost sensitivity studies: ~
         \caption{Act II}
     \end{subfigure}
     \hfill \hfill ~\\ ~\\ ~\\ ~\\
-  \caption{Cost Sensitivity: $({q_{95}})_{max}$ vs. $B_0$} ~\\
+  \caption[]{Cost Sensitivity: $({q_{95}})_{max}$ vs. $B_0$} ~\\
 \end{figure*}
 
 
@@ -2530,7 +2530,7 @@ This section includes the following cost sensitivity studies: ~
         \caption{Act II}
     \end{subfigure}
     \hfill \hfill ~\\ ~\\ ~\\ ~\\
-  \caption{Cost Sensitivity: $({P_W})_{max}$ vs. $B_0$} ~\\
+  \caption[]{Cost Sensitivity: $({P_W})_{max}$ vs. $B_0$} ~\\
 \end{figure*}
 
 
