--- a/fussy.tex
+++ b/fussy.tex
@@ -191,7 +191,7 @@ First and foremost, a study has four families of reactors within it: beta-wall (
 \texttt{cur\_dict = Dict() \\ ~ \\
 cur\_dict["Beta-Wall"] = cur\_study.wall\_reactors \\
 cur\_dict["Beta-Kink"] = cur\_study.kink\_reactors \\ ~ \\
-cur\_dict["Min Cost per Watt"] = cur\_study.cost\_reactors \\
+cur\_dict["Min Cost-per-Watt"] = cur\_study.cost\_reactors \\
 cur\_dict["Min Capital Cost"] = cur\_study.W\_M\_reactors
 }
 \end{addmargin}
