--- a/model.tex
+++ b/model.tex
@@ -63,8 +63,8 @@ Acknowledging that temperature is the most difficult to handle parameter prompts
 \begin{equation}
 	\label{eq:tbar}
 	\overline T = const.
+	\myequations{Scanned Temperature -- $\overline T$}
 \end{equation}
-\myequations{Scanned Temperature -- $\overline T$}
 \replaced{The constant value, here,}{Where the constant} happens to be 10 \added{keV} in one run, 15 \added{keV} for the next, and 30 \added{keV} in the fifth.
 
 \subsubsection{The Plasma Density -- $\overline n$}
@@ -235,7 +235,7 @@ Now that all five terms have been defined in power balance, the next step is exp
 
 \subsection{Writing the Lawson \replaced{Parameter}{Criterion}}
 
-Before \replaced{arriving at a formula for}{locking in the primary constraint -- i.e.\ } the magnet strength ($B_0$) \replaced{using}{equation from} power \replaced{balance,}{balance} -- it seems appropriate to take a detour and explain an intermediate solution: the Lawson \replaced{Parameter}{Criterion}. Within the fusion community, the Lawson \replaced{Parameter}{Criterion} is the cornerstone in any argument on the possibility of a \replaced{tokamak ever}{design} being used as a \replaced{reactor.}{reactor (and not just some grandiose toaster).}
+Before \replaced{arriving at a formula for}{locking in the primary constraint -- i.e.\ } the magnet strength ($B_0$) \replaced{using}{equation from} power \replaced{balance,}{balance} -- it seems appropriate to take a detour and explain an intermediate solution: the Lawson \replaced{Parameter}{Criterion}.\cite{lawson} Within the fusion community, the Lawson \replaced{Parameter}{Criterion} is the cornerstone in any argument on the possibility of a \replaced{tokamak ever}{design} being used as a \replaced{reactor.}{reactor (and not just some grandiose toaster).}
 
 An equation for the Lawson \replaced{Parameter}{Criterion} -- sometimes referred to as the \emph{triple product} -- is easily found in the literature as:
 \begin{equation}
@@ -314,7 +314,7 @@ The goal now is to transform the Lawson \replaced{Parameter}{Criterion} into an 
 	\end{adjustbox}
 %	\includegraphics[width=0.75\textwidth]{images/test_image}
 	\caption{H-Mode Confinement Time Scaling} ~\\
-	\small This plot shows how well the ELMy H-Mode Scaling Law does for fitting $\tau_E$ to the ITER98 database of global tokamaks. For most values, the fit is at least 80\% accurate with the measured value.
+	\small This plot shows how well the ELMy H-Mode Scaling Law does for fitting $\tau_E$ to the ITER98 database of global tokamaks. For most values, the fit is at least 80\% accurate with the measured value.\cite{tau_iter} 
 	\label{fig:elmy}
 \end{figure}
 
