--- a/results.tex
+++ b/results.tex
@@ -783,7 +783,7 @@ The pulsed twin reactor, Proteus, highlights the effects of a high field central
 
 \added{Before moving onto general conclusions taken from the data, a quick investigation into the pulsed vs steady-state twin results is in order. A comparison between the two is best abridged in \cref{table:proteus_charybdis}.}
 
-\added{Most apparently, pulsed reactors are typically larger than steady-state ones and are meant to be run at higher plasma currents. The former behavior was seen with the DEMO designs,\cite{process,inputfile} whereas the latter was already mentioned in discussing how steady-state reactors never saw a kink (current limiting) regime. Additionally pulsed machines can be run at much lower temperatures because their higher current improves confinement. }
+\added{Most apparently, pulsed reactors are typically larger than steady-state ones and are meant to be run at higher plasma currents. The former behavior was seen with the DEMO designs,\cite{process,inputfile} -- as the larger size was needed for long pulse lengths.\cite{giruzzi} The latter was then already mentioned in discussing how steady-state reactors never saw a kink (current limiting) regime. Additionally pulsed machines can be run at much lower temperatures because their higher current improves confinement. }
 
 \added{These combined effects lead to the minimum cost reactors for steady-state operation having much higher toroidal field strengths than their pulsed counterparts. This is discussed in \cref{subsection:high_field} when explaining optimum use of HTS tape. }  
 
@@ -1067,7 +1067,7 @@ The more interesting result is that pulsed reactors gain no real benefit from us
 
 \subsection{Looking at Design Alternatives}
 
-Even in this relatively simple fusion model, there are more than twenty \replaced{static}{fixed}/input variable knobs a designer can tune to improve reactor feasibility. Many have practical limits, such as being physically realizable or fitting within the ELMy H-Mode database. Thus, the goal of this subsection is to investigate some of the more interesting results. Although many more plots are available in the appendix.
+Even in this relatively simple fusion model, there are more than twenty \replaced{static}{fixed}/input variable knobs a designer can tune to improve reactor feasibility. Many have practical limits, such as being physically realizable or fitting within the ELMy H-Mode database. Thus, the goal of this subsection is to investigate some of the more interesting results. Although many more plots are available in \cref{chapter:extra}.
 
 \subsubsection{Capitalizing the Bootstrap Current}
 
