Wrap up major revisions for the night

--- a/biblio.tex
+++ b/biblio.tex
@@ -2,6 +2,7 @@
 %% If you want to create a bibliography file by hand, change the contents of
 %% this file to a `thebibliography' environment.  For more information 
 %% see section 4.3 of the LaTeX manual.
+\addcontentsline{toc}{chapter}{References}
 \begin{singlespace}
 \bibliography{main}
 %\bibliographystyle{plain}
