--- a/code.tex
+++ b/code.tex
@@ -18,6 +18,8 @@
 %
 %\let\cleardoublepage\relax \tableofcontents \newpage
 
+\addtocontents{toc}{\protect\newpage} % Adds \newpage in "\tableofcontents"
+
 \chapter{Completing the Systems Model}
 
 \label{chapter:complete}
