--- a/steady.tex
+++ b/steady.tex
@@ -21,7 +21,7 @@
 
 This chapter explores a simple model for designing steady-state tokamaks. In the next couple chapters, the model is first formalized for use in a systems code and then generalized to handle pulsed operation. These derivations highlight that the only difference between the two modes \added{of operation} is how they generate their auxiliary plasma current: LHCD for steady-state operation and inductive sources for when a reactor is purely pulsed.
 
-Along the way, equations will be derived that get rather complicated. To remedy the situation, a distinction between \replaced{dynamic}{floating} and \replaced{static}{fixed} values is now given, which will allow splitting most equations into \replaced{static}{fixed} and \replaced{dynamic}{floating} parts. \replaced{Dynamic}{Fixed} values -- i.e.\ the tokamak's major radius ($R_0$) and magnet strength ($B_0$), as well as the plasma's current ($I_P$), temperature ($\overline T$), and density ($\overline n$) -- are first-class variables in the model \added{(see \cref{table:dynamic})}. Everything is derived to relate them. \replaced{Static}{Fixed} values, on the other hand, can be treated as code inputs, which remain constant throughout a reactor solve.  These most obviously include the various geometric and profile parameters introduced next section. 
+Along the way, equations will be derived that get rather complicated. To remedy the situation, a distinction between \replaced{dynamic}{floating} and \replaced{static}{fixed} values is now given, which will allow splitting most equations into \replaced{static}{fixed} and \replaced{dynamic}{floating} parts. \replaced{Dynamic}{Fixed} values -- i.e.\ the tokamak's major radius ($R_0$) and magnet strength ($B_0$), as well as the plasma's current ($I_P$), temperature ($\overline T$), and density ($\overline n$) -- are first-class variables in the model \added{(see \cref{table:dynamic})}. Everything is derived to relate them. \replaced{Static}{Fixed} values, on the other hand, can be treated as code inputs, which remain constant throughout a reactor solve.  These most obviously include the various geometric and profile parameters introduced next section.
 
 \added{
 The overall structure of this chapter, then, is built around developing an equation for plasma current in a steady-state tokamak. It is shown that this value arises from balancing current in a reactor using both a plasma's own bootstrap current ($I_{BS}$), as well the tokamak's auxiliary driven current ($I_{CD}$). These relations necessitate geometric parameters and plasma profiles, which will be given shortly. Along the way, definitions will also be needed for the Greenwald density ($N_G$) and the fusion power ($P_F$). What is shown is that the current does not actually depend directly on the major radius ($R_0$) or magnet strength ($B_0$) of a tokamak -- allowing these variables to be put off until next chapter.
@@ -39,7 +39,7 @@ The first thing people see when they look at a tokamak is its geometry \added{--
 
 \begin{figure*}[h!]
     \centering
-    \hfill 
+    \hfill
     \begin{subfigure}[t]{0.45\textwidth}
         \centering
 		\begin{adjustbox}{width=\textwidth}
@@ -69,15 +69,15 @@ These questions lend themselves to the three important geometric variables -- th
 	\tcboxmath{
 	a = \epsilon \cdot R_0
 	}
-	\myequations{Minor Radius -- $a$}
 \end{equation}
-This says that the minor radius (a), measured in meters, is related to the major radius of the machine ($R_0$) through $\epsilon$. Or more tangibly, the minor radius is related to the two small \replaced{cross-sections}{circles} that \replaced{result from a slice across the major radius of the machine.}{come from tearing a bagel in two. Whereas the major radius is related to the overall circle of the bagel when viewing it from the top.} 
+\myequations{Minor Radius -- $a$}
+This says that the minor radius (a), measured in meters, is related to the major radius of the machine ($R_0$) through $\epsilon$. Or more tangibly, the minor radius is related to the two small \replaced{cross-sections}{circles} that \replaced{result from a slice across the major radius of the machine.}{come from tearing a bagel in two. Whereas the major radius is related to the overall circle of the bagel when viewing it from the top.}
 
 The remaining two geometric parameters -- $\kappa$ and $\delta$ -- are related to the shape of the torn halves. As the name hints, elongation ($\kappa$) is a measure of how stretched out the tokamak is vertically -- is the cross-section a circle or an oval? The triangularity ($\delta$) is then how much the cross-sections point outward from the center of the device. All three's effects can be seen in \cref{fig:geometry}. \added{Their exact usage within describing flux surfaces is shown in \cref{chapter:flux}. }
 
 \begin{figure*}[h]
     \centering
-    \hfill 
+    \hfill
     \begin{subfigure}[t]{0.45\textwidth}
         \centering
 		\begin{adjustbox}{width=\textwidth}
@@ -119,7 +119,7 @@ The first step in defining radial profiles is realizing that all three quantitie
 
 \begin{figure*}
     \centering
-    \hfill 
+    \hfill
     \begin{subfigure}[t]{0.45\textwidth}
         \centering
 		\begin{adjustbox}{width=\textwidth}
@@ -148,39 +148,39 @@ The first step in defining radial profiles is realizing that all three quantitie
 To begin, density has the simplest profile. This is because it is relatively flat, remaining near the average value -- $\overline n$ -- throughout the body of the plasma until quickly decaying to zero near the edge of the plasma.\footnote{Even in H-Mode plasmas where density profiles have a pedestal,\cite{density} they usually have much less of a peak than temperatures\cite{temperature} -- especially so in a reactor setting.\cite{pedestals}} For this reason, a parabolic profile with a very low peaking factor -- $\nu_n$ -- is well suited.
 \begin{equation}
 	n(\rho) = \overline n \cdot ( 1 + \nu_n ) \, \cdot ( 1 - \rho ^ 2 ) ^ {\nu_n}
-	\myequations{Density Profile -- $n$}
 \end{equation}
-\added{The reason $\overline n$ is referred to as the volume-averaged density is because using the volume integral -- given by \cref{eq:qv} -- over the density profile results in that value after dividing through by the volume ($\volume$):} 
+\myequations{Density Profile -- $n$}
+\added{The reason $\overline n$ is referred to as the volume-averaged density is because using the volume integral -- given by \cref{eq:qv} -- over the density profile results in that value after dividing through by the volume ($\volume$):}
 \begin{equation}
 	\overline n = \frac{ \int n(\vec{\bold{r}}) \, d\vec{\bold{r}}  }{\volume}
 \end{equation}
-\added{A final point to make is this parabolic profile allows for a short closed-form relation for the Greenwald density limit -- substantially simplifying this fusion systems model.} 
+\added{A final point to make is this parabolic profile allows for a short closed-form relation for the Greenwald density limit -- substantially simplifying this fusion systems model.}
 
 \subsubsection{The Temperature Profile}
 
 The use of a parabolic profile for the plasma temperature is slightly more dubious. This is because H-Mode plasmas are actually highly peaked at the center, decaying to a non-zero pedestal temperature near the edge before finally dropping sharply to zero. This model chooses to forego this pedestal representation for a simple parabolic one -- although the pedestal approach is discussed in \cref{chapter:profiles}. Analogous to the density, the profile treats $\overline T$ as the average value and $\nu_T$ as the peaking parameter.
 \begin{equation}
 	T(\rho) = \overline T \cdot ( 1 + \nu_T ) \, \cdot ( 1 - \rho ^ 2 ) ^ {\nu_T}
-	\myequations{Temperature Profile -- $T$}
 \end{equation}
+\myequations{Temperature Profile -- $T$}
 
 \subsubsection{The Current \added{Density} Profile}
 
 The plasma current \added{density} is the third profile and cannot safely be represented by a simple parabola. This is because having an adequate bootstrap current relies heavily on a profile being peaked off-axis -- i.e.\ at some radius not at the center. This hollow profile can then be modeled with the commonly given plasma internal inductance ($l_i$). Concretely, the current's hollow profile is described by:
 \begin{equation}
 	J(\rho) = \bar{J} \cdot \frac{ \gamma ^ 2 \cdot ( 1 - \rho ^ 2 ) \cdot e^{ \gamma \rho^2 } }{ e^\gamma - 1 - \gamma}
-	\myequations{Current Density Profile -- $J$}
 \end{equation}
+\myequations{Current Density Profile -- $J$}
 The intermediate $\gamma$ quantity can then be numerically solved for from the plasma internal inductance using the following relations -- with $b_p$ representing the normalized poloidal magnetic field. \added{These are derived in \cref{chapter:bootstrap}.}
 \begin{equation}
 	l_i = \frac{4 \kappa}{1+\kappa^2}	 \int_0^1 b_p^2 \, \rho \, d\rho
-	\myequations{Internal Inductance -- $l_i$}
 \end{equation}
+\myequations{Internal Inductance -- $l_i$}
 \begin{equation}
 	\label{eq:b_p}
 	b_p(\rho) = \frac{ -e^{\gamma\rho^2} ( \gamma\rho^2 - 1 - \gamma ) - 1 - \gamma }{\rho \,( e^\gamma - 1 - \gamma ) }
-	\myequations{Normalized Poloidal Magnetic Field -- $b_p$}
 \end{equation}
+\myequations{Normalized Poloidal Magnetic Field -- $b_p$}
 
 Combined, these three geometric parameters and profiles lay the foundation for this zero-dimensional fusion systems model.
 
@@ -192,8 +192,8 @@ As suggested, one of the most important equations in a fusion reactor is current
 	\tcboxmath{
 	I_P = I_{BS} + I_{CD}
 	}
-	\myequations{Current Balance -- $I$}
 \end{equation}
+\myequations{Current Balance -- $I$}
 The goal is then to write equations for bootstrap current and driven current. This will make heavy use of the Greenwald density limit. \replaced{The steady current will then be}{Without spoiling too much, the steady current is} shown to be only a function of temperature! In other words, this current is independent of a tokamak's geometry and magnet strength. As will be pointed out then, though, a subtlety arises that will bring the two back into the picture -- self-consistency in the current drive efficiency ($\eta_{CD}$).
 
 \subsection{Enforcing the Greenwald Density Limit}
@@ -202,7 +202,7 @@ The Greenwald density limit is \replaced{a density limit that applies to all tok
 
 \begin{figure*}
     \centering
-    \hfill 
+    \hfill
     \begin{subfigure}[t]{0.45\textwidth}
         \centering
 		\begin{adjustbox}{width=\textwidth}
@@ -221,7 +221,7 @@ The Greenwald density limit is \replaced{a density limit that applies to all tok
         \caption{JET}
     \end{subfigure}
     \hfill \hfill ~\\ ~\\ ~\\ ~\\
-    \hfill 
+    \hfill
     \begin{subfigure}[t]{0.45\textwidth}
         \centering
 		\begin{adjustbox}{width=\textwidth}
@@ -264,19 +264,19 @@ Here, $\hat n$ has units of $10^{20} \ \frac{\textnormal{particles}}{\textnormal
 \end{equation}
 The next step is transforming the \emph{line-averaged} density ($\hat n$) into the \emph{volume-averaged} version ($\overline n$) used in this model. Harnessing the simplicity of the density's parabolic profile allows this relation to be written in a closed form as:
  \begin{equation}
- 	\hat n = \frac{\sqrt{\pi}}{2} \cdot \left( \frac{\Gamma \left( \nu_n + 2 \right)}{\Gamma \left( \nu_n + \frac{3}{2} \right)} \right) \cdot \overline n 
+ 	\hat n = \frac{\sqrt{\pi}}{2} \cdot \left( \frac{\Gamma \left( \nu_n + 2 \right)}{\Gamma \left( \nu_n + \frac{3}{2} \right)} \right) \cdot \overline n
  \end{equation}
- 
+
  Where $\Gamma( \, \cdots)$ represents the gamma function: the non-integer analogue of the factorial function.
- 
+
  Combining these pieces allows the volume-averaged density to be written in standardized units \deleted{(i.e.\ the ones we use)} as:
- \begin{equation}
+\begin{equation}
  	\label{eq:greenwald}
  	\tcbhighmath{
  	\overline n = K_n \cdot \left( \frac{I_P}{R_0^2} \right)
  	}
- 	 \myequations{Greenwald Density -- $\overline n$}
- \end{equation}
+\end{equation}
+\myequations{Greenwald Density -- $\overline n$}
  \begin{equation}
  	K_n = \frac{2 N_G}{\epsilon^2 \, \pi^{3/2} } \cdot \left( \frac{\Gamma \left( \nu_n + \frac{3}{2} \right)}{\Gamma \left( \nu_n + 2 \right)} \right)
 \end{equation}
@@ -310,14 +310,14 @@ The first term to define in current balance, \cref{eq:ibal}, is the bootstrap cu
 \begin{equation}
 \begin{split}
 	J_{BS} & = f\left( n , T , \frac{dn}{d\rho} , \frac{dT}{d\rho}  \right) \\
-		& \equiv -4.85 \cdot n \cdot T \cdot \frac{ R_0 \sqrt{ \epsilon \, \rho } }{ \sfrac{d\psi}{d\rho} } \cdot \left( \frac{1}{n} \frac{dn}{d\rho} + 0.54 \, \frac{1}{T} \frac{dT}{d\rho} \right) 
+		& \equiv -4.85 \cdot n \cdot T \cdot \frac{ R_0 \sqrt{ \epsilon \, \rho } }{ \sfrac{d\psi}{d\rho} } \cdot \left( \frac{1}{n} \frac{dn}{d\rho} + 0.54 \, \frac{1}{T} \frac{dT}{d\rho} \right)
 \end{split}
 \end{equation}
 
 \added{
-The second definition for the bootstrap current density -- $J_{BS}$ -- comes from using well known theoretical results plus several simplifying assumptions, including the large aspect limit. The value of $\sfrac{d\psi}{d\rho}$ is given in \cref{chapter:bootstrap}. 
+The second definition for the bootstrap current density -- $J_{BS}$ -- comes from using well known theoretical results plus several simplifying assumptions, including the large aspect limit. The value of $\sfrac{d\psi}{d\rho}$ is given in \cref{chapter:bootstrap}.
  }
- 
+
 \deleted{For a more formal look into this $J_{BS}$ function, check the appendix section on pedestal temperatures. The point to make now is that it depends on the the profiles' derivatives, leading to one major discrepancy in the model.}
 
 As shown later in the results, bootstrap fractions are often under-predicted by this model. This is due to parabolic profiles (i.e.\ for temperature) having much less steep declines near the edge (i.e.\ in their derivatives) than characteristic H-Mode profiles with pedestals. This implies that the area most positively impacted by a pedestal profile for temperature would be the bootstrap current derivation. \added{The instructions to do so are given in \cref{section:pedestalbootstrap}. }
@@ -342,8 +342,8 @@ As shown later in the results, bootstrap fractions are often under-predicted by 
 	\tcboxmath{
 	I_{BS} = K_{BS} \cdot \overline T
 	}
-	\myequations{Bootstrap Current -- $I_{BS}$}
 \end{equation}
+\myequations{Bootstrap Current -- $I_{BS}$}
 \begin{equation}
   K_{BS} = 4.879 \cdot  K_n \cdot \left( \, \frac{1+\kappa^2}{2} \, \right) \cdot \epsilon^{5/2} \cdot H_{BS}
 \end{equation}
@@ -366,7 +366,7 @@ Quickly noting, this $H_{BS}$ term serves as the analogue of \replaced{static}{f
 %	\end{adjustbox}
 %%	\includegraphics[width=0.75\textwidth]{images/test_image}
 %	\caption{Comparing Nuclear Fusion and Fission} ~\\
-%	\small The binding energy per nucleon is what differentiates nuclear fusion from fission. Nuclei heavier than Iron fission (e.g.\ Uranium), while light ones -- such as Hydrogen -- fuse. 
+%	\small The binding energy per nucleon is what differentiates nuclear fusion from fission. Nuclei heavier than Iron fission (e.g.\ Uranium), while light ones -- such as Hydrogen -- fuse.
 %	\label{fig:binding_energy}
 %\end{figure}
 
@@ -395,7 +395,7 @@ Quickly noting, this $H_{BS}$ term serves as the analogue of \replaced{static}{f
 %\end{figure}
 
 \deleted{The final point to make before returning to the fusion power derivation is the main difference between the two fusion products: helium (i.e.\ the alpha particle) and the neutron. First, neutrons lack a charge -- they are neutral. This means they cannot be confined with magnetic fields. As such, they simply move in straight lines until they collide with other particles. As the structure of a tokamak is mainly metal, the neutron is much more likely to collide there than the gaseous plasma, which is orders of magnitude less dense. Conversely, alpha particles are charged -- when stripped of their electrons -- and can therefore be kept within the plasma using magnets. What this means practically is that of the 17.6 MeV that comes from every fusion reaction, only 3.5 MeV remains inside the plasma (within the helium particle species).}
- 
+
  \added{The next segue on our journey to solving for the steady current is deriving the fusion power ($P_F$), which appears in current drive. A comprehensive introduction to this is given in \cref{chapter:power}.} \replaced{Summarized, though, a formula for}{Returning to the problem at hand, the} fusion power from a D-T reaction -- in megawatts -- is given by \replaced{the following volume integral: \cite{fusionpower} }{ Jeff Freidberg's textbook through the following volume integral: }
  \begin{equation}
  	\label{eq:pf_int}
@@ -405,12 +405,12 @@ Quickly noting, this $H_{BS}$ term serves as the analogue of \replaced{static}{f
 	E_F = 17.6 \ \textnormal{MeV}
 \end{equation}
 \added{The $E_F$ quantity is the energy created from a deuterium-tritium fusion reaction.} The $n_D$ and $n_T$ in this equation \added{then} represent the density of the deuterium and tritium ions, respectively. Assuming a 50-50 mix of the two, they can be related to the electron density -- i.e.\ the one used in this model -- through the dilution factor \added{($f_D$). This dilution factor represents the decrease in available fuel from part of the plasma actually being composed of non-hydrogen gasses}:
- \begin{equation}
- 	n_D = n_T = f_D \cdot \left( \frac{n}{2} \right)
- 	 \myequations{Dilution Factor -- $f_{D}$}
- \end{equation}
+\begin{equation}
+	n_D = n_T = f_D \cdot \left( \frac{n}{2} \right)
+\end{equation}
+\myequations{Dilution Factor -- $f_{D}$}
  The fusion reactivity, $\langle \sigma v \rangle$, is then a nonlinear function of the temperature, T, which the model approximates using the Bosch-Hale tabulation (described in \cref{chapter:power}). As this tabulated value appears inside an integral, it seems important to point out that the temperature is now the most difficult \replaced{dynamic}{floating} variable to handle -- over $R_0$, $B_0$, $\overline n$, and $I_P$. This will come into play when the model is formalized next chapter.
- 
+
  The next step in the derivation of fusion power is transforming the three-dimensional volume integral (see Eq. \ref{eq:pf_int}) into a zero-dimension averaged value. First, the volume analogue of the previously given surface-area integral is:
  \begin{equation}
   	\tag{\ref{eq:qv}}
@@ -426,8 +426,8 @@ In standardized units, this becomes:
 	\tcboxmath{
 	P_F = K_F \cdot \overline{n}^2 \cdot R_0^3  \cdot (\sigma v)
 	}
-	\myequations{Fusion Power -- $P_F$}
 \end{equation}
+\myequations{Fusion Power -- $P_F$}
 \begin{equation}
   K_F = 278.3 \cdot f_D^2 \cdot ( \epsilon^2 \kappa g )
 \end{equation}
@@ -460,14 +460,16 @@ In standardized units, the equation for current drive is often given in the lite
 Here, $\eta_{CD}$ is the current drive efficiency with units $ \left(
 \frac{ \textnormal{MA} }{ \textnormal{MW-m}^2 } \right) $ and $P_H$ is the heating power in megawatts driven by LHCD (and absorbed by the plasma).
 
-Let it be known, though, that driving current in a plasma is hard! In fact, pulsed reactor designers (i.e.\ European fusion researchers) think it is so difficult, they may choose to forego it completely -- focusing only on inductive sources that necessitate reactor fatigue and downtime. 
+Let it be known, though, that driving current in a plasma is hard! In fact, pulsed reactor designers (i.e.\ European fusion researchers) think it is so difficult, they may choose to forego it completely -- focusing only on inductive sources that necessitate reactor fatigue and downtime.
 
 A common current drive efficiency ($\eta_{CD}$) seen in many designs is $0.3 \pm 0.1 $ in the standard units. It is however inherently a function of all the plasma parameters -- with subtlety put off until the discussion of self-consistency. For now it assumed to have some constant/\replaced{static}{fixed} value.
 
 The remaining step in deriving an equation for driven current ($I_{CD}$) is a formula for the heating power ($P_H$). The way fusion systems models -- like this one -- handle the heating power is through the physics gain factor, Q. Sometimes referred to as big Q, this value represents how many times over the heating power ($P_H$) is amplified as it is transformed into fusion power ($P_F$):
 \begin{equation}
+	\label{eq:ph}
 	P_H = \frac{P_F}{Q}
 \end{equation}
+\myequations{Heating Power -- $P_H$}
 Now, utilizing the previously defined Greenwald density and fusion power:
  \begin{equation}
  	\tag{\ref{eq:greenwald}}
@@ -483,8 +485,8 @@ The current from LHCD can be written as:
 	\tcboxmath{
 	I_{CD} = K_{CD} \cdot I_P \cdot ( \sigma v )
 	}
-	\myequations{Current Drive -- $I_{CD}$}
 \end{equation}
+\myequations{Current Drive -- $I_{CD}$}
 \begin{equation}
 	K_{CD} = \left( K_F K_n \right) \cdot \frac{\eta_{CD}}{Q}
 \end{equation}
@@ -512,8 +514,8 @@ Combining these three equations and solving for the total plasma current ($I_P$)
 	\tcbhighmath{
 	I_P = \frac{ K_{BS} \, \overline T }{ 1 - K_{CD} ( \sigma v ) }
 	}
-	\myequations{Steady Current -- $I_P$}
 \end{equation}
+\myequations{Steady Current -- $I_P$}
 
 This is the answer we have been seeking!
 
@@ -530,8 +532,8 @@ The logic behind finding a self-consistent current-drive efficiency is starting 
 As mentioned, a self-consistent $\eta_{CD}$ is found once a trip through the Ehst-Karney black-box results in the same $\eta_{CD}$ as was \replaced{sent}{piped} in -- to some tolerable level of error. This consistency incorporates an explicit dependence on the tokamak configuration. Mathematically,
 \begin{equation}
 	\tilde \eta_{CD} = f( R_0, B_0, \overline n, \overline T, I_P )
-	\myequations{Current Drive Efficiency -- $\eta_{CD}$}
 \end{equation}
+\myequations{Current Drive Efficiency -- $\eta_{CD}$}
 As such, to recalculate it after every solution of the steady current requires a value for both $B_0$ and $R_0$ -- the targets of this model's primary and \replaced{limiting}{secondary} constraints. These will be the highlight of the next chapter.
 
 %\end{document}
